Particle System Crash #47773

Closed
opened 2016-03-12 21:41:55 +01:00 by Bill Harrelson · 5 comments

System Information
Operating system and graphics card
Xubuntu 15.10, Mac OS X 10.6.5
Nvidia GTX 960 (Xubuntu), Nvidia GeForce 9400 (Mac Mini)

Blender Version
Broken: 2.75a, 2.76b, 2.77-rc2 (Xubuntu), 2.69 (Mac)

Short description of error
A simple scene with one particle emitter containing 3 particle systems. When played, Blender will close without warning (Segmentation fault).

Exact steps for others to reproduce the error

  • Load the attached file.
  • Press "play." Blender will fold up.

Work around:
Select the emitter.
Tab into edit mode, then tab out again.
Press "play." System will function correctly.

DEBUG-S02_Crowd-Particles-6.blend

**System Information** Operating system and graphics card Xubuntu 15.10, Mac OS X 10.6.5 Nvidia GTX 960 (Xubuntu), Nvidia GeForce 9400 (Mac Mini) **Blender Version** Broken: 2.75a, 2.76b, 2.77-rc2 (Xubuntu), 2.69 (Mac) **Short description of error** A simple scene with one particle emitter containing 3 particle systems. When played, Blender will close without warning (Segmentation fault). **Exact steps for others to reproduce the error** - Load the attached file. - Press "play." Blender will fold up. Work around: Select the emitter. Tab into edit mode, then tab out again. Press "play." System will function correctly. [DEBUG-S02_Crowd-Particles-6.blend](https://archive.blender.org/developer/F289653/DEBUG-S02_Crowd-Particles-6.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cyclotron

Added subscriber: @Cyclotron

This issue was referenced by 34fe03c7f2

This issue was referenced by 34fe03c7f25cd06876a79af418ced9f4cfa91226

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2016-03-13 18:24:59 +01:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47773
No description provided.