source/blender/blenkernel/intern/boids.c
@@ -310,6 +310,7 @@ static int rule_avoid_collision(BoidRule *rule, BoidBrainData *bbd, BoidValues *
 		ParticleSystem *epsys = psys_get_target_system(bbd->sim->ob, pt);
 
 		if (epsys) {
+			BLI_assert(epsys->tree != NULL);
 			neighbors = BLI_kdtree_range_search__normal(
 			        epsys->tree, pa->prev_state.co, pa->prev_state.ave,
 			        &ptn, acbr->look_ahead * len_v3(pa->prev_state.vel));
